--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ log = "0.4"
 wasm-logger = "0.2"
 console_error_panic_hook = "0.1"
 base64 = "0.13"
+wee_alloc = "0.4"
 
 [profile.release]
-debug = true
+codegen-units = 1
+opt-level = "z"
