--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,15 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 yew = "0.17"
 wasm-bindgen = "0.2.67"
-biscuit-auth = "0.7"
+#biscuit-auth = "0.7"
+biscuit-auth = { path = "../biscuit-rust", features = ["wasm"] }
 rand = "0.7"
 log = "0.4"
 wasm-logger = "0.2"
 console_error_panic_hook = "0.1"
 base64 = "0.13"
 wee_alloc = "0.4"
+nom = "6"
 
 [profile.release]
 codegen-units = 1
