--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license = "Apache-2.0"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-yew = "0.17"
+#yew = "0.17"
 wasm-bindgen = "0.2.67"
 #biscuit-auth = "0.7"
 biscuit-auth = { path = "../biscuit-rust", features = ["wasm"] }
